// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scenes/Lists Should render a list of Lists otherwise 1`] = `
<div>
  <styled.h2>
    My Lists
  </styled.h2>
  <Apollo(NewList) />
  <styled.ul>
    <li>
      <Apollo(Apollo(Apollo(ListContainer)))
        id={1}
        name="List #1"
      />
    </li>
    <li>
      <Apollo(Apollo(Apollo(ListContainer)))
        id={2}
        name="List #2"
      />
    </li>
  </styled.ul>
</div>
`;

exports[`scenes/Lists Should render a loader when the data is fetching 1`] = `
<div>
  <styled.h2>
    My Lists
  </styled.h2>
  <Loader />
</div>
`;
